@@ -314,6 +314,8 @@ public:
 		EXIF_MAKERNOTE_ASAHI,
 		EXIF_MAKERNOTE_PENTAX,
 		EXIF_MAKERNOTE_SONY,
+		EXIF_MAKERNOTE_SIGMA_SD1,
+		EXIF_MAKERNOTE_SIGMA_FOVEON,
 		IPTC,
 		GEOTIFF,
 		ANIMATION
